--- a/LSTM_XLK_returns.ipynb
+++ b/LSTM_XLK_returns.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -140,19 +140,19 @@
        "4  1/8/99  35.5625  34.484299  35.5000  34.875000  532800  27.530819  0.405103"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xlk = pd.read_csv(\"xlk_data2.csv\")\n",
+    "xlk = pd.read_csv(\"stock_data/xlk_data2.csv\")\n",
     "xlk.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "7/8/99  42.484299  41.4375  41.5000  42.281200  379200  33.377380  1.348318"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -354,9 +354,9 @@
     "def return_plot(df, column, title):    \n",
     "    plt.figure(figsize=(16,7))\n",
     "    plt.xticks(range(0,df.shape[0],500),df.index[::500],rotation=45)\n",
+    "    plt.ylabel('Returns(%)')\n",
     "    plt.plot(df[column])\n",
     "    plt.grid(True)\n",
-    "    plt.ylabel('Returns(%)')\n",
     "    plt.title(title, fontsize=18)\n",
     "    plt.show()\n",
     "close_plot(data, 'DlyRtn',  'XLK Daily Returns')"
